--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como surgio a mascote do android</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="Estilos/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
